--- a/LeaveManagementSystem/Views/Employee/ListEmployee.cshtml
+++ b/LeaveManagementSystem/Views/Employee/ListEmployee.cshtml
@@ -9,13 +9,15 @@
 <div style="width:100px;">
     <div class="input-group" style="width:300px;">
         <form action="/employee/Listemployee">
-            <input type="text" class="form-control" placeholder="Search Employee" name="Search">
-            <span class="input-group-btn">
-                <button class="btn btn-default" type="submit">
+            <div class="form-row">
+                <input type="text" class="form-control col-sm-8" style="margin:0 10px" placeholder="Search Employee" name="Search">
 
+                <button class="btn btn-info col-sm-2" type="submit">
                     <span class="glyphicon glyphicon-search"></span>
                 </button>
-            </span>
+            </div>
+            
+            
         </form>
     </div>
     <br /><br />
