All changes done !

--- a/LeaveManagementSystem/Views/Account/UpdatePassword.cshtml
+++ b/LeaveManagementSystem/Views/Account/UpdatePassword.cshtml
@@ -35,8 +35,8 @@
         <span class="text-danger">
             @Html.ValidationSummary()
         </span>
-
-        <button type="submit" class="btn btn-success">Save</button>
+        <br />
+        <button type="submit" class="btn btn-primary" style="float:right;">Save</button>
 
     }
 
