--- a/LeaveManagementSystem/Views/Department/ChangeVirtualHead.cshtml
+++ b/LeaveManagementSystem/Views/Department/ChangeVirtualHead.cshtml
@@ -38,3 +38,14 @@
 
 </form>
 
+<style>
+    #active {
+        background-color: grey !important;
+        color: white !important;
+    }
+</style>
+<script>
+
+    $("a[href='/department/departmentlist']").attr("id", "active");
+
+</script>
