--- a/LeaveManagementSystem/Views/Department/DepartmentList.cshtml
+++ b/LeaveManagementSystem/Views/Department/DepartmentList.cshtml
@@ -40,7 +40,7 @@
 
                                         <td>
                                             <a href="~/department/ChangeVirtualHead?deptId=@item.DepartmentID&empId=@item.EmployeeID&deptName=@item.DepartmentName&existVTName=@item.EmployeeName"
-                                               class="btn btn-success">
+                                               class="btn btn-primary">
                                                 <i class="fas fa-user-edit ml-2"></i>
                                             </a>
                                         </td>
