--- a/LeaveManagementSystem/Views/Employee/ListEmployee.cshtml
+++ b/LeaveManagementSystem/Views/Employee/ListEmployee.cshtml
@@ -53,7 +53,7 @@
                                     </td>
                                     <td>
                                         <a href="~/employee/deleteemployee/@item.EmployeeID"
-                                           class="btn btn-primary">
+                                           class="btn btn-danger">
                                             <i class="fas fa-user-times ml-2"></i>
                                         </a>
                                     </td>
