--- a/LeaveManagementSystem/Views/Designation/AddDesignation.cshtml
+++ b/LeaveManagementSystem/Views/Designation/AddDesignation.cshtml
@@ -57,7 +57,17 @@
 
     });
 </script>
+<style>
+    #active {
+        background-color: grey !important;
+        color: white !important;
+    }
+</style>
+<script>
 
+    $("a[href='/designation/ListDesignation']").attr("id", "active");
+
+</script>
 
 
 
